--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,6 +27,7 @@ subjects:
 - !lcsh 'Fathers and sons -- England -- Whitby'
 - !lcsh 'Whaling'
 - !lcc 'G'
+- GITenberg
 title: "Memorials of the Sea: My Father\r\nBeing Records of the Adventurous Life of\
   \ the Late William Scoresby, Esq. of Whitby"
 url: http://www.gutenberg.org/ebooks/35183
